--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -29,9 +29,9 @@
 
 
             <Line
-            X1="{Binding Line_1.X1, UpdateSourceTrigger=PropertyChanged}" Y1="{Binding Line_1.Y1, UpdateSourceTrigger=PropertyChanged}"
-            X2="{Binding Line_1.X2, UpdateSourceTrigger=PropertyChanged}" Y2="{Binding Line_1.Y2, UpdateSourceTrigger=PropertyChanged}"
-            Stroke="Black"
+            X1="0" Y1="0"
+            X2="0" Y2="40"
+            Stroke="{Binding Line_1_color}"
             StrokeThickness="3" Grid.Row="1" Canvas.Left="110" Canvas.Top="90" />
             <Ellipse
         Fill="#99F0FFF0"
@@ -54,13 +54,13 @@
             <Line
             X1="0" Y1="0"
             X2="0" Y2="40"
-            Stroke="Black"
+            Stroke="{Binding Line_2_color}"
             Name="line_2"
             StrokeThickness="3" Grid.Row="1" Canvas.Left="110" Canvas.Top="170" />
             <Line
             X1="0" Y1="0"
             X2="0" Y2="40"
-            Stroke="Black"
+            Stroke="{Binding Line_3_color}"
             Name="line_3"
             StrokeThickness="3" Grid.Row="1" Canvas.Left="110" Canvas.Top="267" />
             <Ellipse
@@ -81,9 +81,11 @@
                 Width="6"
                 StrokeThickness="2"
                 Stroke="Black" Canvas.Left="107" Canvas.Top="266"/>
+            <Button Content="{Binding Disconector_state}" Canvas.Left="10" Canvas.Top="60" Width="53" FontSize="8" Background="#FF73B470" Command="{Binding DisconectorCommand}"/>
+            <Button Content="{Binding Breaker_state}" Canvas.Left="10" Canvas.Top="138" Width="53" FontSize="8" Background="#FF73B470" Command="{Binding BreakerCommand}"/>
         </Canvas>
         <Canvas Margin="17,8,3,10" Background="#FFC1F1AB" Grid.Column="1" Grid.Row="1">
-            <TextBox Name="statistics" Height="188" Canvas.Left="132" TextWrapping="Wrap" Text="Statistika" Canvas.Top="130" Width="320" Background="#33FFFFFF"/>
+            <TextBox Name="statistics" Height="188" Canvas.Left="132" TextWrapping="Wrap" Text="{Binding Statistics}" Canvas.Top="130" Width="320" Background="#33FFFFFF"/>
         </Canvas>
 
         <Line
@@ -93,16 +95,16 @@
         StrokeThickness="3" Margin="51,10,153,268" Grid.Row="1"/>
 
         <Line
-        X1="20" Y1="0"
-        X2="0" Y2="40"
-        Stroke="Black"
+         X1="{Binding Disconector, UpdateSourceTrigger=PropertyChanged}" Y1= "0"
+         X2="0" Y2="40"
+        Stroke="{Binding Dis_color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
         Name="disconector"
         StrokeThickness="3" Margin="120,59,529,325" Grid.Row="1" />
 
         <Line
-            X1="20" Y1="0"
+            X1="{Binding Breaker, UpdateSourceTrigger=PropertyChanged}" Y1="0"
             X2="0" Y2="40"
-            Stroke="Black"
+            Stroke="{Binding Breaker_color}"
             Name="breaker"
             StrokeThickness="3" Margin="120,138,530,245" Grid.Row="1" />
 
@@ -117,5 +119,6 @@
             </Polygon.Fill>
         </Polygon>
         <Label Content="AM" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="90,318,0,0" Grid.Row="1" VerticalAlignment="Top" Height="40" Width="58" FontFamily="Vijaya" FontSize="16"/>
+        <Label Content="{Binding PubSub}" Grid.Column="2" Margin="10,111,10,0" Grid.Row="1" VerticalAlignment="Top"/>
     </Grid>
 </Window>
